# test2

./: .cursorrules  .gitignore  CLAUDE.md  README.md  intro.txt  文档示例1.docx  文档示例2.docx  系统设计与实现文档.md  运维文档_生产服务器.md
backend/: .env.example  .env0413  ARCHITECTURE_OPTIMIZATION_PLAN.md  Makefile  README.md  email_accounts.yaml  pyproject.toml  test_screenshot.py
backend/.claude/: settings.local.json
backend/api/app/: constants.py  db.py  enums.py  main.py  security.py  settings.py  task_cleaner.py  task_importer.py  task_reporter.py  task_reporter_copy.py  task_runner.py  task_runner_evidence.py  task_runner_payment.py  task_runner_subscription.py  utils.py
backend/core/website_analytics/: __init__.py  agent_factory.py  batch_reporter.py  cli.py  cloudflare_bypass.py  config.py  email_accounts.py  filters.py  formatter.py  main.py  (+9 more)
backend/db/: wa.db
backend/db.0210/: wa.db  wa.db-shm  wa.db-wal
backend/evals/: fetch_db.sh  runner.py
backend/instructions/: coordinator_agent.md  evidence_agent.md  extract_agent.md  inspect_agent.md  inspect_entry_agent.md  login_agent.md  payment_agent.md  register_agent.md
backend/resources/: evidence.jsonl  evidence1.jsonl  evidence2.jsonl  evidence3.jsonl  evidence4.jsonl  evidence88.jsonl  exported320.jsonl  exported320few.jsonl  payment.jsonl  payment10.jsonl  payment2.jsonl  payment3.jsonl  payment4.jsonl  payment5.jsonl  subscribe_clean.jsonl  subscribed.jsonl  subscription.jsonl  subscription1.jsonl  subscription5.jsonl  subscription6.jsonl  subscription88.jsonl  tasks.txt  unsubscribed.jsonl  unsubscribed_clean.jsonl
backend/scripts/: README_fetch_site_details.md  check_email_accounts.py  convert_subscribe_jsonl.py  convert_subscribed_jsonl.py  convert_unsubscribed_jsonl.py  export_tasks.py  fetch_site_details.py  generate_llm_usage.py  import_evidence_tasks.py  import_subscribed_tasks.py  import_subscription_tasks.py  import_unsubscribed_tasks.py  kafka_consumer.py  kafka_producer.py  produce_tasks.py  rename_tables.py  sync_llm_usage.py
backend/tests/: test_utils.py
(+124 files in other folders)
